--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <div class="container">
         <div class="cal-container">
             <div class="cal-top">
-                <button onclick="clearValue()" class="clear-btn">C</button>
+                <button onclick="clickButton('c')" class="clear-btn">C</button>
                 <input type="text" class="result-display" id="result" disabled>
             </div>
             <div class="cal-buttons">
-                <button onclick="appendValue('7')" class="num-btn btn7" id="num-7">7</button>
-                <button onclick="appendValue('8')" class="num-btn btn8" id="num-8">8</button>
-                <button onclick="appendValue('9')" class="num-btn btn9" id="num-9">9</button>
-                <button onclick="appendValue('+')" class="btn+ calculation" id="num-+">+</button>
-                <button onclick="appendValue('4')" class="num-btn btn4" id="num-4">4</button>
-                <button onclick="appendValue('5')" class="num-btn btn5" id="num-5">5</button>
-                <button onclick="appendValue('6')" class="num-btn btn6" id="num-6">6</button>
-                <button onclick="appendValue('-')" class="btn- calculation" id="num--">-</button>
-                <button onclick="appendValue('1')" class="num-btn btn1" id="num-1">1</button>
-                <button onclick="appendValue('2')" class="num-btn btn2" id="num-2">2</button>
-                <button onclick="appendValue('3')" class="num-btn btn3" id="num-3">3</button>
-                <button onclick="appendValue('/')" class="btn/ calculation" id="num-/">/</button>
-                <button onclick="appendValue('0')" class="num-btn btn0" id="num-0">0</button>
-                <button onclick="appendValue('.')" class="num-btn btn." id="num-.">.</button>
+                <button onclick="getValue('7')" class="num-btn btn7" id="num-7">7</button>
+                <button onclick="getValue('8')" class="num-btn btn8" id="num-8">8</button>
+                <button onclick="getValue('9')" class="num-btn btn9" id="num-9">9</button>
+                <button onclick="getValue('+')" class="btn+ calculation" id="num-+">+</button>
+                <button onclick="getValue('4')" class="num-btn btn4" id="num-4">4</button>
+                <button onclick="getValue('5')" class="num-btn btn5" id="num-5">5</button>
+                <button onclick="getValue('6')" class="num-btn btn6" id="num-6">6</button>
+                <button onclick="getValue('-')" class="btn- calculation" id="num--">-</button>
+                <button onclick="getValue('1')" class="num-btn btn1" id="num-1">1</button>
+                <button onclick="getValue('2')" class="num-btn btn2" id="num-2">2</button>
+                <button onclick="getValue('3')" class="num-btn btn3" id="num-3">3</button>
+                <button onclick="getValue('/')" class="btn/ calculation" id="num-/">/</button>
+                <button onclick="getValue('0')" class="num-btn btn0" id="num-0">0</button>
+                <button onclick="getValue('.')" class="num-btn btn." id="num-.">.</button>
                 <button onclick="calculateValue()" class="cal-btn btn=" id="num-=">=</button>
-                <button onclick="appendValue('*')" class="btn* calculation" id="num-*">*</button>
+                <button onclick="getValue('*')" class="btn* calculation" id="num-*">*</button>
             </div>
         </div>
     </div>
